# cp-rust

./: .gitignore  Cargo.toml  README.md
src/: codeforces.rs  lib.rs  main.rs  webdriver.rs
src/codeforces/: 4a.rs
src/templates/: default.rs
