[package]
name = "cp-rust"
version = "0.0.1"
authors = ["Gabriel Wu <wuzihua@pku.edu.cn>"]
edition = "2018"
default-run = "cp-rust"
autobins = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap" }
data-encoding = "2.1.2"  
dotenv = "0.15.0"
fantoccini = "0.12.0-alpha.4"
git2 = "0.10.1"
rand = "0.7.2"
reqwest = { version = "0.10.0-alpha.2", features = ["json"] }
ring = "0.16.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.9.6"
tokio = "1.0.1" 
url = "2.1.0"