[package]
name = "cp-rust"
version = "0.0.1"
authors = ["Gabriel Wu <wuzihua@pku.edu.cn>"]
edition = "2018"
default-run = "cp-rust"
autobins = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
data-encoding = "2"
dotenv = "0.15"
fantoccini = "0.15"
git2 = "0.13"
rand = "0.7"
reqwest = { version = "0.11", features = ["json"] }
ring = "0.17.0-alpha.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.15"
tokio = { version = "1", features = ["full"] }
url = "2"